tdf#95798: CRASH: when finish Function wizard on Report builder

Following http://cgit.freedesktop.org/libreoffice/core/commit/?id=844b7287a4ccd8e3d5e458bb1dc6c52e71322b01

Change-Id: Ia5a2cd39cf3fdf87619f55710a188545830b4088
Reviewed-on: https://gerrit.libreoffice.org/19970
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Jenkins <ci@libreoffice.org>